minor main fix